# OpenGLFundations

./: .gitignore  README.md
GLAD_version/templates/t_04/: CMakeLists.txt
GLAD_version/templates/t_04/include/: Camera.h  Light.h  Model.h  RenderContext.h  Scene.h  ShaderProgram.h  Utils.h  WindowGL.h
GLAD_version/templates/t_04/shaders/: fs_tex.glsl  vs_tex.glsl
GLAD_version/templates/t_04/src/: Light.cpp  Scene.cpp  ShaderProgram.cpp  Utils.cpp  WindowGL.cpp  glad.c
Test/: verificacion.cpp  verificacion_total
computer_graphics_templates/temp_00/src/: main.cpp
computer_graphics_templates/temp_01/: CMakeLists.txt
computer_graphics_templates/temp_01/include/: Model.h  Scene.h  ShaderProgram.h
computer_graphics_templates/temp_01/shaders/: vertex_shader.glsl
computer_graphics_templates/temp_01/src/: Main.cpp  Scene.cpp  ShaderProgram.cpp  WindowGL.cpp
libs/glew-2.2.0/: glew.pc
notes/: Chapter_4.md  Installation.md  OpenGL_first_steps.md  Shaders.md
refactor/Template_Application/: CMakeLists.txt  README.md
refactor/Template_Application/shaders/: frag_texture_shader.glsl  vert_texture_shader.glsl  vertex_shader.glsl
refactor/Template_Application/src/: main.cpp
refactor/Template_OBJ_Optimized/: CMakeLists.txt
refactor/Template_OBJ_Optimized/src/: Main.cpp
scripts/CH1/: CMakeLists.txt  Main.cpp  cubo  first.cpp  vertShader.glsl
scripts/CH_1/p_CH1/: fragShader.glsl
scripts/CH_2/exercises/ex_2_3/: CMakeLists.txt
scripts/CH_2/exercises/ex_2_3/shaders/: vertShader.glsl
scripts/CH_6/exercises/solar_system/: CMakeLists.txt
scripts/CH_6/exercises/solar_system/include/: Camera.h  Planet.h  Sphere.h  Window.h
scripts/CH_6/exercises/solar_system/include/models/: CustomModel.h
scripts/CH_6/exercises/solar_system/include/obj_helpers/: ImportedModel.h
scripts/CH_6/exercises/solar_system/src/: Camera.cpp  Main.cpp  Sphere.cpp  Torus.cpp  Window.cpp
scripts/CH_6/exercises/solar_system/src/models/: CustomModel.cpp  Torus.cpp
scripts/CH_6/exercises/solar_system/src/obj_helpers/: ImportedModel.cpp  ModelImporter.cpp
scripts/CH_6/p_CH6_Initial/: CMakeLists.txt
scripts/CH_6/p_CH6_Initial/include/: Torus.h  Utils.h  Window.h
scripts/CH_6/p_CH6_Initial/shaders/: vertShader.glsl
scripts/CH_6/p_CH6_Initial/src/: Camera.cpp  Main.cpp  Sphere.cpp  Torus.cpp  Window.cpp
templates/t_01/: CMakeLists.txt
templates/t_01/include/: Cube.h  Model.h  Scene.h  ShaderProgram.h  WindowGL.h
templates/t_01/src/: Scene.cpp  ShaderProgram.cpp  WindowGL.cpp
templates/t_02/shaders/: frag_shader.glsl
templates/t_02/src/: Scene.cpp
templates/t_02_5/: CMakeLists.txt
templates/t_02_5/include/: Model.h  Scene.h
templates/t_02_5/src/: Scene.cpp
templates/t_03/: CMakeLists.txt
templates/t_03/src/: Scene.cpp
templates/t_04/: CMakeLists.txt
templates/t_04/include/: Camera.h  Light.h  Model.h  Scene.h  ShaderProgram.h  Utils.h  WindowGL.h
templates/t_04/shaders/: fs_light.glsl  fs_tex.glsl  vs_light.glsl  vs_tex.glsl
templates/t_04/src/: Light.cpp  Main.cpp  Scene.cpp  Utils.cpp
templates/t_render_buffer_obj/: CMakeLists.txt
templates/t_render_buffer_obj/include/: Shader.h
templates/t_render_buffer_obj/shaders/: plane.frag  plane.vert  render.frag  render.vert
templates/t_render_buffer_obj/src/: Shader.cpp  main.cpp
(+282 files in other folders)
